# bazel-training

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  abcd  maven_install.json  repositories.bzl  user.bazelrc
labs/: lab10.1.sass.md  lab10.2.play.md  lab11.platforms.toolchains.md  lab12.remote.features.md  lab2.java.md  lab3.golang.md  lab4.queries.md  lab5.advanced-java.protobuf.md  lab6.grpc.md  lab7.1.genrules.md  lab7.2.bonus.md  lab8.1.rules_closure.md  lab8.2.rules_nodejs.md  lab9.rules.md
rules/: BUILD.bazel  codegen.bzl  play.bzl  repo_codegen.bzl  sass.bzl  sass_deps.bzl
src/main/closure/templates/: BUILD.bazel  greeter.js  greeter.soy  greeter_test.js
src/main/cpp/cypher/: BUILD.bazel  compiler.cpp  cypher.cpp  cypher.h  interpreter.cpp  interpreter.h
src/main/genrule/test/: compare.sh
src/main/go/converter/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go
src/main/go/echo_server/: BUILD.bazel  echo_server.go  go.mod  go.sum
src/main/go/message/: BUILD.bazel  message.go
src/main/java/com/flarebuild/echo_client/: BUILD.bazel  EchoClient.java
src/main/java/com/flarebuild/hello/: BUILD.bazel
src/main/java/com/flarebuild/message/: BUILD.bazel
src/main/jsonsv/: BUILD
src/main/jsonsv/test/: expected.jsonsv  ext.sh
src/main/play/helloworld/: BUILD.bazel
src/main/play/helloworld/app/controllers/: Application.java
src/main/play/helloworld/app/views/: main.html
src/main/play/helloworld/conf/: application.conf  dependencies.yml  routes
src/main/play/helloworld/modules/greeter/: BUILD.bazel
src/main/play/helloworld/modules/greeter/app/controllers/: Greeter.java
src/main/play/helloworld/modules/greeter/app/views/Greeter/: index.html
src/main/play/helloworld/modules/greeter/conf/: routes
src/main/play/helloworld/modules/greeter/src/: BUILD.bazel  call_greeter.js
src/main/play/random/: BUILD.bazel
src/main/play/random/app/controllers/: Random.java
src/main/play/random/app/views/Random/: index.html
src/main/play/random/conf/: routes
src/main/proto/: BUILD.bazel  echo.proto  message_object.proto
src/main/python/codegen/: main.py
src/sass/helloworld/: BUILD.bazel  main.scss
src/sass/shared/: BUILD.bazel  colors.scss  fonts.scss
src/test/java/com/flarebuild/complex/: BUILD  BUILD.bazel
tmp/: BUILD.bazel  testbin.py
tools/cypher/: BUILD.bazel  cypher.bzl  toolchain.bzl
tools/cypher/example/: BUILD.bazel
tools/cypher/private/: cypher.bzl  cypher_toolchain.bzl
