load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "training-labs/src/main/go/converter",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gocarina_gocsv//:go_default_library"],
)

go_binary(
    name = "converter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)

filegroup(
    name = "csv_expected",
    srcs = ["test/expected.csv"],
    visibility = ["//src/main/genrule:__pkg__"]
)