load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["echo_server.go"],
    importpath = "training-labs/src/main/go/echo_server",
    visibility = ["//visibility:private"],
    deps = [
        "//src/main/proto:echo_go_proto_grpc",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "echo_server",
    srcs = ["echo_server.go"],
    deps = [
        "//src/main/proto:echo_go_proto_grpc",
        "//src/main/proto:message_object_go_proto",
         "@org_golang_x_net//context:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
    ]
)
