load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "message",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["message.go"],
    importpath = "training-labs/src/main/go/message",
    visibility = ["//visibility:private"],
)
