java_binary(
    name = "echo_client",
    srcs = ["EchoClient.java"],
    main_class = "EchoClient",
    runtime_deps = [
        "@io_grpc_grpc_java//netty",
    ],
    deps = [
        "//src/main/proto:message_object_proto_java",
        "//src/main/proto:echo_java_proto",
        "//src/main/proto:echo_java_proto_grpc",
        "@io_grpc_grpc_java//api",
    ]
)
